--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     
     body {
-    background: url("C:\\Users\\Udit\\Desktop\\portfolio\\wall 2.jpeg");
+    background: url("C:\Users\Udit\Documents\GitHub\contact.github.io\wall 2.jpeg");
   }
   
   #title-Tag-Line {
